v3.4.0 (2021.01.xx)
  - Add "Export discovery diagnostic data" PVR Client Specific setting

v3.3.4 (2020.12.09)
  - Update SQLite database engine to version 3.34.0
  - Update cURL library to version 7.74.0
  - (Linux) Retarget ARMEL build to require ARMv6 architecture

v3.3.3 (2020.09.30)
  - Update SQLite database engine to version 3.33.0
  - Update cURL library to version 7.72.0
  - Fix bug that reported recording rule start time padding as both the start and end time padding
  - Add "Report actual start and end times for upcoming timers" Interface option

v3.3.2 (2020.07.15)
  - Update SQLite database engine to version 3.32.3
  - Update cURL library to version 7.71.1
  - (Linux/OSX) Enable missing compiler optimization flags during build

v3.3.1 (2020.05.28)
  - Update SQLite database engine to version 3.32.1
  - Fix bug preventing recordings from being loaded when duplicate series identifiers exist
  - Report HDHomeRun device version information in device discovery logs
  - Add "List recent error messages" PVR Client Specific setting

v3.3.0 (2020.05.01)
  - Update cURL library to version 7.70.0
  - Refactor recordings database table to utilize HDHomeRun RECORD engine series update identifiers
  - Add "Preferred channel name format" interface setting
  - Remove "Use channel names from tuner device(s) in channel lineups" interface setting
  - Fix bug that could cause HTTP 416 when seeking on a Recorded TV stream that has switched from in-progress to fully recorded

v3.2.2 (2020.04.23)
  - Update cURL library to version 7.69.1
  - Adapt to HDHomeRun RECORD engine 20200318 breaking changes
  - Apply recording rule start and end time padding deltas to the reported start and end times for timer instances
  - Omit reporting of original air date for programs of type News/Current Affairs unless a specific season/episode is specified
  - De-duplicate the list of reported timer instances so that only the first airing of an unrecorded program is shown