@@ -54,11 +54,6 @@ public:
 	// Flag indicating if the stream allows seek operations
 	bool canseek(void) const;
 
-	// chunksize
-	//
-	// Gets the stream chunk size
-	size_t chunksize(void) const;
-
 	// close
 	//
 	// Closes the stream
@@ -68,7 +63,6 @@ public:
 	//
 	// Factory method, creates a new httpstream instance
 	static std::unique_ptr<httpstream> create(char const* url);
-	static std::unique_ptr<httpstream> create(char const* url, size_t chunksize);
 
 	// length
 	//
@@ -105,11 +99,6 @@ private:
 	httpstream(httpstream const&)=delete;
 	httpstream& operator=(httpstream const&)=delete;
 
-	// DEFAULT_CHUNK_SIZE
-	//
-	// Default stream chunk size
-	static size_t const DEFAULT_CHUNK_SIZE;
-
 	// DEFAULT_MEDIA_TYPE
 	//
 	// Default media type to report for the stream
@@ -132,7 +121,7 @@ private:
 
 	// Instance Constructor
 	//
-	httpstream(char const* url, size_t chunksize);
+	httpstream(char const* url);
 
 	//-----------------------------------------------------------------------
 	// Private Member Functions
@@ -164,7 +153,6 @@ private:
 	//
 	CURL*						m_curl = nullptr;					// CURL easy interface handle
 	CURLM*						m_curlm = nullptr;					// CURL multi interface handle
-	size_t const				m_chunksize;						// Stream chunk size
 	std::unique_ptr<char[]>		m_curlerr;							// CURL error message
 
 	// STREAM STATE
